<?xml version="1.0"?>
<package>
  <name>kulbabu_hardware</name>
  <version>0.0.1</version>
  <description>The kulbabu_hardware package</description>

  <maintainer email="mr-yellow@mr-yellow.com">Mr-Yellow</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/kulbu/kulbabu_hardware</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kulbabu_description</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
